--- a/server/views/index.html
+++ b/server/views/index.html
@@ -71,7 +71,7 @@
     };
     $.ajax({
     	type:"POST",
-    	url:"http://localhost:3000/api/dingyms",
+    	url:"http://128.199.190.92/api/dingyms",
     	data:json,
     	success: function(data){
     		console.log(data);
