--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,7 +13,7 @@
 			<header class="clearfix">
 				
 				<h1>DIN Form</h1>
-				
+				<!-- test -->
 			</header>	
 			<div class="main">
 				<form class="cbp-mc-form">
